@@ -209,3 +209,4 @@ added classes AffyExonPDInfo and AffySTPDInfo
 ** add some docs
 ** commented out example (CNSet) the breaks completely the build process
 ** added eval=FALSE on the vignette on the relevant part so the pkg can be built
+** fixed initialization for CNSet to conform changes on 1.9.44.
